# monolith-fastapi-payment-gateway

./: Makefile  README.md  alembic.ini  curl.md  example_random.py  pyproject.toml
grafana_setup/: Auth Service-1733117026866.json  Email Service-1733200182562.json  README.md  Saldo Service-1733117097239.json  Topup Service-1733117109208.json  Trace Jaeger-1733117122927.json  Transfer Service-1733117132032.json  User Service-1733117142611.json  Withdraw Service-1733117153395.json
internal/: README.md  alembic.ini  docker-compose.yml  requirements.txt
internal/lib/: README.md
internal/lib/config/: app.py  base.py  development.py  main.py  production.py  test.py
internal/lib/http/: http_config.py
internal/lib/kafka/: kafka_config.py
internal/lib/logging/: logging_config.py
internal/lib/migrations/: env.py
internal/lib/model/: __init__.py  saldo.py  topup.py  transfer.py  user.py  withdraw.py
internal/lib/otel/: otel_config.py
internal/lib/security/: hash_password.py  header.py  jwt.py
internal/lib/utils/: errors.py
internal/prometheus/: prometheus.yml
internal/services/: README.md
internal/services/api_gateway/: .dockerignore  Dockerfile  main.py
internal/services/auth_service/: .dockerignore  Dockerfile  curl.md  main.py
internal/services/email_service/: .dockerignore  Dockerfile  main.py  service.py
internal/services/saldo_service/: .dockerignore  Dockerfile  curl.md  main.py
internal/services/topup_service/: .dockerignore  Dockerfile  curl.md  main.py
internal/services/tranfer_service/: Dockerfile  main.py
(+106 files in other folders)
