[tool.poetry]
name = "microservice-payment-gateway"
version = "0.1.0"
description = ""
authors = ["renaldyhidayatt <renaldyhidayatt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"
fastapi = "^0.115.5"
bcrypt = "^4.2.1"
pyjwt = "^2.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
sqlalchemy-utils = "^0.41.2"
uvicorn = "^0.32.1"
structlog = "^24.4.0"
pydantic = {extras = ["email"], version = "^2.10.2"}
pydantic-settings = "^2.6.1"
psycopg2-binary = "^2.9.10"
dependency-injector = "^4.43.0"
python-jose = "^3.3.0"
aiokafka = "^0.12.0"
python-keycloak = "^4.7.2"
opentelemetry-api = "^1.28.2"
opentelemetry-sdk = "^1.28.2"
opentelemetry-instrumentation-fastapi = "^0.49b2"
opentelemetry-exporter-prometheus = "^0.49b2"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-exporter-otlp = "^1.28.2"
opentelemetry-instrumentation-aiokafka = "^0.49b2"
httpx = "^0.28.0"
opentelemetry-instrumentation-kafka-python = "^0.49b2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
